--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.1",
     "axios": "^1.7.2",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
