--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
     "axios": "^1.7.2",
+    "echarts": "^5.5.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
