--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-toastify": "^10.0.5"
   },
